--- a/src/cypress/files/cypress/tsconfig.json
+++ b/src/cypress/files/cypress/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../tsconfig.json",
-  "include": ["integration/*.ts", "support/*.ts", "../node_modules/cypress"]
+  "include": ["integration/*.ts", "support/*.ts", "../node_modules/cypress"],
+  "compilerOptions": {
+    "types": ["cypress", "node"]
+  }
 }
