update typescript 3.7.2, prettier

--- a/src/schematics/cypress/files/cypress/tsconfig.json
+++ b/src/schematics/cypress/files/cypress/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "include": ["integration/*.ts", "support/*.ts", "../node_modules/cypress"],
   "compilerOptions": {
-    "types": ["cypress", "node"]
+    "types": ["cypress", "node"],
+    "target": "es6"
   }
 }
