--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:clean:launch": "yarn build && yarn clean:launch",
     "clean": "git checkout HEAD -- sandbox && git clean -f -d sandbox",
     "clean:launch": "yarn clean && yarn launch",
-    "launch": "cd sandbox && ng g @briebug/cypress-schematic:cypress",
+    "launch": "cd sandbox && ng add @briebug/cypress-schematic",
     "link:schematic": "yarn link && cd sandbox && yarn link @briebug/cypress-schematic",
     "publish": "yarn build",
     "test": "yarn build:clean:launch && yarn test:sandbox && yarn clean",
@@ -20,15 +20,16 @@
     "test:unit": "yarn build && jasmine src/**/*_spec.js"
   },
   "keywords": [
-    "schematics",
+    "builders",
     "cypress",
-    "testing",
     "e2e",
+    "schematics",
+    "testing",
     "time-travel"
   ],
   "author": "Briebug",
   "license": "MIT",
-  "schematics": "./src/collection.json",
+  "schematics": "./src/schematics/collection.json",
   "publishConfig": {
     "access": "public"
   },
@@ -37,7 +38,7 @@
     "@angular-devkit/core": "^8.3.15",
     "@angular-devkit/schematics": "^8.3.15",
     "@schematics/angular": "^8.3.15",
-    "cypress": "3.6.0",
+    "cypress": "3.6.1",
     "rxjs": "6.4.0"
   },
   "devDependencies": {
@@ -46,8 +47,8 @@
     "husky": "1.3.1",
     "jasmine": "^3.3.1",
     "lint-staged": "8.1.1",
-    "prettier": "1.16.1",
-    "typescript": "~3.2.4"
+    "prettier": "1.19.1",
+    "typescript": "~3.7.2"
   },
   "husky": {
     "hooks": {
