--- a/package.json
+++ b/package.json
@@ -73,16 +73,17 @@
     }
   ],
   "peerDependencies": {
-    "cypress": "^7.0.0"
+    "cypress": "^7.0.0",
+    "@angular-devkit/architect": "^0.1102.0",
+    "@angular-devkit/core": "^11.2.0",
+    "rxjs": "^6.6.2"
   },
-  "dependencies": {
-    "@angular-devkit/architect": "^0.1001.0",
-    "@angular-devkit/core": "^10.1.0",
-    "@angular-devkit/schematics": "^10.1.0",
-    "@schematics/angular": "^10.1.0",
-    "rxjs": "6.6.2"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@angular-devkit/architect": "0.1102.11",
+    "@angular-devkit/core": "11.2.11",
+    "@angular-devkit/schematics": "11.2.11",
+    "@schematics/angular": "11.2.11",
     "@types/jasmine": "^3.5.14",
     "@types/node": "^10.17.30",
     "chalk": "^4.1.0",
@@ -91,6 +92,7 @@
     "jasmine": "^3.6.1",
     "lint-staged": "^10.2.13",
     "prettier": "^2.1.1",
+    "rxjs": "6.6.7",
     "typescript": "^4.0.2"
   }
 }
